# taxbot-llm-service

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  deployment.yaml  pyproject.toml  requirements.txt
app/: __main__.py  app.py  model.py
examples/: example-meta-llama.py  langchain-tools-example.py  langgraph-example.py
llms/openai/: model.py
src/: misc.py
src/config/: config.json  config.yaml
src/image/: model.py
src/llms/: agent.py  assistant.py  chat_agent.py  langchain.py  llm.py  openai.py  toolkit.py
src/prompt_templates/: system_prompts.json  system_prompts.md
src/prompts/system/: main.md
src/text/: model.py
utils/: env_variables.py  image_utils.py
