[tool.poetry]
name = "taxbot-llm-service"
version = "0.1.0"
description = ""
authors = ["pratyushmohit <pratyushmohit226@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.0.3"}
pydantic = "^2.8.2"
httpx = "^0.27.0"
langchain = "^0.2.7"
langchain-openai = "^0.1.16"
langchain-community = "^0.2.7"
langchain-mongodb = "^0.1.6"
langchain-experimental = "^0.0.62"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
